--- a/mul_datasource/src/main/resources/application.properties
+++ b/mul_datasource/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-#第一数据源
+#first datasource
 datasource.first.driverClassName=com.mysql.jdbc.Driver
-datasource.first.url=jdbc:mysql://192.168.43.45:3306/springboot?characterEncoding=UTF-8
-datasource.first.username=root
-datasource.first.password=123
+datasource.first.url=jdbc:mysql://ip:3306/database?characterEncoding=UTF-8
+datasource.first.username=**
+datasource.first.password=**
 
-#第二数据源
+#second datasource
 datasource.second.driverClassName=com.mysql.jdbc.Driver
-datasource.second.url=jdbc:mysql://192.168.43.235:3306/springboot2?characterEncoding=UTF-8
-datasource.second.username=root
-datasource.second.password=123
+datasource.second.url=jdbc:mysql://ip:3306/database?characterEncoding=UTF-8
+datasource.second.username=**
+datasource.second.password=**
 
